
[TestInitInteractiveFlowStateSnapshots/loader - 1]
? cmd.init.prompt.loader.question                
❯ bukkit                                         
  bungeecord                                     
  cauldron                                       
  datapack                                       
  fabric                                         
  folia                                          
  forge                                          
  liteloader                                     
                                                 
  •••                                            
                                                 
  ↑/k key.direction.up • ↓/j key.direction.down …
                                                 
---

[TestInitInteractiveFlowStateSnapshots/game_version - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1     

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---

[TestInitInteractiveFlowStateSnapshots/release_types - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question         
❯   alpha                                        
    beta                                         
  ✓ release                                      
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
  ↑/k key.direction.up • ↓/j key.direction.down …
                                                 
---

[TestInitInteractiveFlowStateSnapshots/mods_folder - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question release
? cmd.init.prompt.mods-folder.question mods        

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---

[TestInitInteractiveFlowStateSnapshots/done - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question release
? cmd.init.prompt.mods-folder.question mods
? cmd.init.prompt.confirm-write.question cmd.init.prompt.confirm.suffix cmd.init.prompt.option.yes.short

---

[TestInitInteractiveFlowErrorSnapshots/game_version_invalid - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question invalid     <- cmd.minecraft.version.invalid

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---

[TestInitInteractiveFlowErrorSnapshots/release_types_empty - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question         
❯   alpha                                        
    beta                                         
  ✓ release                                      
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
  ↑/k key.direction.up • ↓/j key.direction.down …
                                                 
cmd.init.error.release-types.empty
---

[TestInitInteractiveFlowErrorSnapshots/mods_folder_missing - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question release
? cmd.init.prompt.mods-folder.question missing         <- cmd.init.prompt.mods-folder.missing

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---

[TestInitInteractiveFlowNonInteractiveNoTTYSnapshot - 1]
                                                                                                                                                                                         
❯ bukkit                                                                                                                                                                                 
  bungeecord                                                                                                                                                                             
  cauldron                                                                                                                                                                               
  datapack                                                                                                                                                                               
  fabric                                                                                                                                                                                 
  folia                                                                                                                                                                                  
  forge                                                                                                                                                                                  
  liteloader                                                                                                                                                                             
  modloader                                                                                                                                                                              
                                                                                                                                                                                         
  1/2                                                                                                                                                                                    
                                                                                                                                                                                         
  ↑/k key.direction.up • ↓/j key.direction.down • / key.help.filter • key.esc key.help.clear_filter • key.enter key.help.apply_filter • key.esc key.help.cancel • q key.help.quit • ? key.help.more
                                                                                                                                                                                         
---

[TestInitInteractiveFlowErrorSnapshots/game_version_unavailable - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1      <- cmd.minecraft.version.unavailable

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---

[TestInitInteractiveFlowUnattendedNoTTYSnapshot - 1]
                                                                                                                                                                                                   
❯ bukkit                                                                                                                                                                                           
  bungeecord                                                                                                                                                                                       
  cauldron                                                                                                                                                                                         
  datapack                                                                                                                                                                                         
  fabric                                                                                                                                                                                           
  folia                                                                                                                                                                                            
  forge                                                                                                                                                                                            
  liteloader                                                                                                                                                                                       
  modloader                                                                                                                                                                                        
                                                                                                                                                                                                   
  1/2                                                                                                                                                                                              
                                                                                                                                                                                                   
  ↑/k key.direction.up • ↓/j key.direction.down • / key.help.filter • key.esc key.help.clear_filter • key.enter key.help.apply_filter • key.esc key.help.cancel • q key.help.quit • ? key.help.more
                                                                                                                                                                                                   
---

[TestInitInteractiveFlowStateSnapshots/confirm_write - 1]
? cmd.init.prompt.loader.question fabric
? cmd.minecraft.version.question 1.21.1
? cmd.init.prompt.release-types.question release
? cmd.init.prompt.mods-folder.question mods
? cmd.init.prompt.confirm-write.question cmd.init.prompt.confirm.suffix            

key.tab key.help.complete • key.enter key.help.accept • key.ctrl_c/key.esc key.help.quit
---
